Changing the anchor.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
       <p class="name typewriter">Rodrigo Kamada</p>
 
       <div class="social-media">
-        <i class="fa fa-linkedin fa-4x fa-animation" onclick="window.open('https://www.linkedin.com/in/rodrigokamada/','_blank')"></i>
-        <i class="fa fa-twitter fa-4x fa-animation" onclick="window.open('https://twitter.com/rodrigokamada','_blank')"></i>
-        <i class="fa fa-github fa-4x fa-animation" onclick="window.open('https://github.com/rodrigokamada','_blank')"></i>
+        <a href="https://www.linkedin.com/in/rodrigokamada/" target="_blank">
+          <i class="fa fa-linkedin fa-4x fa-animation"></i>
+        </a>
+        <a href="https://twitter.com/rodrigokamada" target="_blank">
+          <i class="fa fa-twitter fa-4x fa-animation"></i>
+        </a>
+        <a href="https://github.com/rodrigokamada" target="_blank">
+          <i class="fa fa-github fa-4x fa-animation"></i>
+        </a>
       </div>
     </div>
   </div>
