--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23785313-3"></script>
@@ -11,50 +10,150 @@
     gtag('config', 'UA-23785313-3');
   </script>
 
+  <meta charset="utf-8">
+
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#100e17" />
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#100e17">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#100e17">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="utf-8">
-  <title> Rodrigo Kamada </title>
+  <meta name="description" content="Hello! My name is Rodrigo Kamada. I am a software developer and I am living in São Paulo, Brazil. I graduated from Computer Sciences in 2015.">
+  <meta name="image" content="https://rodrigo.kamada.com.br/assets/images/logo_black_280x237.png" />
+  <meta name="keywords" content="rodrigo, kamada, software, developer, blog, events, podcasts">
+  <meta name="robots" content="index, follow">
 
+  <meta property="og:site_name" content="Rodrigo Kamada - Software developer" />
+  <meta property="og:title" content="Rodrigo Kamada - Software developer" />
+  <meta property="og:description" content="My name is Rodrigo Kamada. I am a software developer and I am living in São Paulo, Brazil. I graduated from Computer Sciences in 2015." />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://rodrigo.kamada.com.br/" />
+  <meta property="og:image" content="https://rodrigo.kamada.com.br/assets/images/logo_black_280x237.png" />
+  <meta property="og:image:secure_url" content="https://rodrigo.kamada.com.br/assets/images/logo_black_280x237.png" />
+  <meta property="og:image:alt" content="Rodrigo Kamada - Software developer" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:locale" content="en_US" />
+
+  <meta name="twitter:title" content="Rodrigo Kamada - Software developer" />
+  <meta name="twitter:description" content="Hello! My name is Rodrigo Kamada. I am a software developer and I am living in São Paulo, Brazil. I graduated from Computer Sciences in 2015." />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:url" content="https://rodrigo.kamada.com.br/" />
+  <meta name="twitter:site" content="@rodrigokamada" />
+  <meta name="twitter:creator" content="@rodrigokamada" />  
+  <meta name="twitter:image" content="https://rodrigo.kamada.com.br/assets/images/logo_black_280x237.png" />
+  <meta name="twitter:image:src" content="https://rodrigo.kamada.com.br/assets/images/logo_black_280x237.png" />
+  <meta name="twitter:image:alt" content="Rodrigo Kamada - Software developer" />
+
+  <title>Rodrigo Kamada - Software developer</title>
+
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/fontawesome.min.css"-->
   <!--script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+
+  <!-- Facebook Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '808829573194631');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=808829573194631&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
   <div class="screen-outter">
     <div class="screen-inner">
-      <p class="name typewriter">Rodrigo Kamada</p>
-
-      <div class="social-media">
-        <a href="https://www.linkedin.com/in/rodrigokamada/" target="_blank">
-          <i class="fa fa-linkedin fa-4x fa-animation"></i>
-        </a>
-        <a href="https://twitter.com/rodrigokamada" target="_blank">
-          <i class="fa fa-twitter fa-4x fa-animation"></i>
-        </a>
-        <a href="https://github.com/rodrigokamada" target="_blank">
-          <i class="fa fa-github fa-4x fa-animation"></i>
-        </a>
+      <div class="row m-5">
+        <div class="col-sm">
+          <img src="assets/images/logo_white_1024x1024.png" class="logo" />
+        </div>
       </div>
+
+      <div class="row m-5">
+        <div class="col-sm">
+          <p class="name typewriter">Rodrigo Kamada</p>
+        </div>
+      </div>
+
+      <div class="row m-5">
+        <div class="col-sm social-buttons">
+          <div class="social">
+            <a href="mailto:rodrigo@kamada.com.br" target="_blank">
+              <img src="assets/images/social_mail_128x128.png" />
+            </a>
+            <a href="https://www.linkedin.com/in/rodrigokamada" target="_blank">
+              <img src="assets/images/social_linkedin_128x128.png" />
+            </a>
+            <a href="https://twitter.com/rodrigokamada" target="_blank">
+              <img src="assets/images/social_twitter_128x128.png" />
+            </a>
+            <a href="https://github.com/rodrigokamada" target="_blank">
+              <img src="assets/images/social_github_128x128.png" />
+            </a>
+            <a href="https://www.npmjs.com/~rodrigokamada" target="_blank">
+              <img src="assets/images/social_npm_128x128.png" class="social-npm" />
+            </a>
+            <a href="https://www.hackerrank.com/rodrigokamada" target="_blank">
+              <img src="assets/images/social_hackerrank_128x128.png" />
+            </a>
+            <a href="https://stackoverflow.com/users/10433716/rodrigo-kamada" target="_blank">
+              <img src="assets/images/social_stackoverflow_128x128.png" />
+            </a>
+            <a href="https://medium.com/@rodrigokamada" target="_blank">
+              <img src="assets/images/social_medium_128x128.png" />
+            </a>
+            <a href="https://dev.to/rodrigokamada" target="_blank">
+              <img src="assets/images/social_dev_128x128.png" />
+            </a>
+            <a href="https://www.instagram.com/rodrigokamada" target="_blank">
+              <img src="assets/images/social_instagram_128x128.png" />
+            </a>
+            <a href="https://fb.me/rodrigokamada" target="_blank">
+              <img src="assets/images/social_facebook_128x128.png" />
+            </a>
+            <a href="https://t.me/rodrigokamada" target="_blank">
+              <img src="assets/images/social_telegram_128x128.png" />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row m-5">
+        <div class="col-sm-12 mb-3 text-center">
+          Buy me a coffee
+          <img src="assets/images/donate_coffee.png" alt="{{ 'profile.coffee' | translate }}" />
+          or a beer
+          <img src="assets/images/donate_beer.png" alt="{{ 'profile.beer' | translate }}" />
+        </div>
+        <div class="col-sm-12 mb-3 text-center">
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+            <input type="hidden" name="cmd" value="_donations" />
+            <input type="hidden" name="business" value="PLY4QRNQL7C98" />
+            <input type="hidden" name="currency_code" value="USD" />
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <img src="https://www.paypal.com/en_BR/i/scr/pixel.gif" alt="" />
+          </form>
+        </div>
+        <div class="col-sm-12 text-center">
+          Thank you!
+        </div>
+      </div>
+
     </div>
   </div>
-
-<!--script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4264226650336040"
-     data-ad-slot="9775668779"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script-->
 </body>
-
 </html>
