--- a/index.html
+++ b/index.html
@@ -119,11 +119,20 @@
             <a href="https://dev.to/rodrigokamada" target="_blank">
               <img src="assets/images/social_dev_128x128.png" />
             </a>
+            <a href="https://dribbble.com/rodrigokamada" target="_blank">
+              <img src="assets/images/social_dribbble_128x128.png" />
+            </a>
             <a href="https://www.instagram.com/rodrigokamada" target="_blank">
               <img src="assets/images/social_instagram_128x128.png" />
             </a>
             <a href="https://fb.me/rodrigokamada" target="_blank">
               <img src="assets/images/social_facebook_128x128.png" />
+            </a>
+            <a href="https://discordapp.com/users/497956332897566721" target="_blank">
+              <img src="assets/images/social_discord_128x128.png" />
+            </a>
+            <a href="https://acmeco.slack.com/team/UKEUM0NS0" target="_blank">
+              <img src="assets/images/social_slack_128x128.png" />
             </a>
             <a href="https://t.me/rodrigokamada" target="_blank">
               <img src="assets/images/social_telegram_128x128.png" />
