--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <a href="https://dribbble.com/rodrigokamada" target="_blank">
               <img src="assets/images/social_dribbble_128x128.png" />
             </a>
+            <a href="https://twitch.tv/rodrigokamada" target="_blank">
+              <img src="assets/images/social_twitch_128x128.png" />
+            </a>
             <a href="https://www.instagram.com/rodrigokamada" target="_blank">
               <img src="assets/images/social_instagram_128x128.png" />
             </a>
