--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <div class="row m-5">
         <div class="col-sm social-buttons">
           <div class="social">
+            <a href="https://rodrigo.kamada.com.br" target="_blank">
+              <span>www</span>
+            </a>
             <a href="mailto:rodrigo@kamada.com.br" target="_blank">
               <img src="assets/images/social_mail_128x128.png" />
             </a>
