--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       </div>
 
       <div class="row m-5">
-        <div class="col-sm social-buttons">
-          <div class="social">
+        <div class="col-sm">
+          <div class="social-buttons">
             <a href="https://rodrigo.kamada.com.br" target="_blank">
               <span>www</span>
             </a>
@@ -108,7 +108,7 @@
               <img src="assets/images/social_github_128x128.png" />
             </a>
             <a href="https://www.npmjs.com/~rodrigokamada" target="_blank">
-              <img src="assets/images/social_npm_128x128.png" class="social-npm" />
+              <img src="assets/images/social_npm_128x128.png" class="social-button-npm" />
             </a>
             <a href="https://www.hackerrank.com/rodrigokamada" target="_blank">
               <img src="assets/images/social_hackerrank_128x128.png" />
