--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
 <body>
   <div class="screen-outter">
     <div class="screen-inner">
-      <div class="row m-5">
+      <div class="row my-5">
         <div class="col-sm">
           <img src="assets/images/logo_white_transparent_128x128.png" class="logo" />
         </div>
       </div>
 
-      <div class="row m-5">
+      <div class="row my-5">
         <div class="col-sm">
           <p class="name typewriter">Rodrigo Kamada</p>
         </div>
       </div>
 
-      <div class="row m-5">
+      <div class="row my-5">
         <div class="col-sm">
           <div class="social-buttons">
             <a href="https://rodrigo.kamada.com.br" target="_blank">
@@ -147,7 +147,7 @@
         </div>
       </div>
 
-      <div class="row m-5">
+      <div class="row my-5">
         <div class="col-sm-12 mb-3 text-center">
           Buy me a coffee
           <img src="assets/images/donate_coffee.png" alt="{{ 'profile.coffee' | translate }}" />
