Changing the Medium URL.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <a href="https://stackoverflow.com/users/10433716/rodrigo-kamada" target="_blank">
               <img src="assets/images/social_stackoverflow_128x128.png" />
             </a>
-            <a href="https://medium.com/@rodrigokamada" target="_blank">
+            <a href="https://rodrigokamada.medium.com" target="_blank">
               <img src="assets/images/social_medium_128x128.png" />
             </a>
             <a href="https://dev.to/rodrigokamada" target="_blank">
